# textToSpeech

./: README.md  main.py  pyproject.toml
core/: core.py
exceptions/: exceptions.py
store/: db.py
tests/: test_main.py
