[tool.poetry]
name = "texttospeech"
version = "0.1.0"
description = ""
authors = ["robert <r.pacak@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
fastapi = "^0.115.2"
slowapi = "^0.1.9"
uvicorn = "^0.32.0"
requests = "^2.32.3"
pytest = "^8.3.3"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
